--- a/binary-strict.cabal
+++ b/binary-strict.cabal
@@ -1,36 +1,42 @@
-name:            binary-strict
-version:         0.4.8.4
-license:         BSD3
-license-file:    LICENSE
-author:          Lennart Kolmodin <kolmodin@dtek.chalmers.se>
-maintainer:      Dominic Steinitz <dominic@steinitz.org>
-homepage:        https://github.com/idontgetoutmuch/binary-low-level
-description:     This is a strict version of the Get monad from the binary
-                 package. It's pretty much just a copy and paste job from the
-                 original source code. The binary team are currently unsure
-                 about their future plans w.r.t. strictness, so this is just a
-                 stop gap measure. See
-		 <http://www.haskell.org/haskellwiki/DealingWithBinaryData> for
-		 documentation.
-synopsis:        Binary deserialisation using strict ByteStrings
-category:        Data, Parsing
-build-depends:   base<5, containers, array, bytestring>=0.9
-stability:       provisional
-tested-with:     GHC == 8.6.3,
-                 GHC == 8.4.4,
-                 GHC == 7.10.2
-exposed-modules: Data.Binary.BitPut
-                 Data.Binary.Strict.ByteSet
-                 Data.Binary.Strict.BitGet,
-                 Data.Binary.Strict.BitUtil
-                 Data.Binary.Strict.Get,
-                 Data.Binary.Strict.Class
-                 Data.Binary.Strict.IncrementalGet,
-                 Data.Binary.Strict.Util
-                 Data.Binary.BitBuilder
-extensions:      CPP, FlexibleContexts
-hs-source-dirs:  src
-extra-source-files: tests/BitGetTest.hs, src/Data/Binary/Strict/Common.h
-ghc-options:     -Wall -fno-warn-name-shadowing
-build-type:      Simple
-build-depends:   mtl >= 2.1 && <2.3
+cabal-version:       >=1.10
+name:                binary-strict
+version:             0.4.8.4
+synopsis:            Binary deserialisation using strict ByteStrings
+description:         This is a strict version of the Get monad from the binary
+                     package. It's pretty much just a copy and paste job
+                     from the original source code. The binary team are
+                     currently unsure about their future plans
+                     w.r.t. strictness, so this is just a stop gap
+                     measure. See
+                     <http://www.haskell.org/haskellwiki/DealingWithBinaryData>
+                     for documentation.
+bug-reports:         https://github.com/idontgetoutmuch/binary-low-level
+license:             BSD3
+license-file:        LICENSE
+author:              Lennart Kolmodin <kolmodin@dtek.chalmers.se>
+maintainer:          Dominic Steinitz <dominic@steinitz.org>
+copyright:           Dominic Steinitz, Lennart Kolmodin
+category:            Data, Parsing
+build-type:          Simple
+extra-source-files:  CHANGELOG.md
+
+library
+  exposed-modules:     Data.Binary.BitBuilder,
+                       Data.Binary.BitPut,
+                       Data.Binary.Strict.Class,
+                       Data.Binary.Strict.BitGet,
+                       Data.Binary.Strict.IncrementalGet,
+                       Data.Binary.Strict.Get,
+                       Data.Binary.Strict.BitUtil,
+                       Data.Binary.Strict.ByteSet,
+                       Data.Binary.Strict.Util
+  other-extensions:    CPP,
+                       FlexibleInstances,
+                       MultiParamTypeClasses,
+                       UndecidableInstances
+  build-depends:       base >=4.12 && <4.13,
+                       bytestring >=0.10 && <0.11,
+                       mtl >=2.2 && <2.3,
+                       array >=0.5 && <0.6
+  hs-source-dirs:      src
+  default-language:    Haskell2010
