--- a/binary-strict.cabal
+++ b/binary-strict.cabal
@@ -1,6 +1,6 @@
 cabal-version:       >=1.10
 name:                binary-strict
-version:             0.4.8.4
+version:             0.4.8.5
 synopsis:            Binary deserialisation using strict ByteStrings
 description:         This is a strict version of the Get monad from the binary
                      package. It's pretty much just a copy and paste job
@@ -18,7 +18,7 @@ maintainer:          Dominic Steinitz <dominic@steinitz.org>
 copyright:           Dominic Steinitz, Lennart Kolmodin
 category:            Data, Parsing
 build-type:          Simple
-extra-source-files:  CHANGELOG.md
+extra-source-files:  src/Data/Binary/Strict/Common.h
 
 library
   exposed-modules:     Data.Binary.BitBuilder,
@@ -40,3 +40,12 @@ library
                        array >=0.5 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+Test-Suite test
+    type:              exitcode-stdio-1.0
+    main-is:           tests/BitGetTest.hs
+    build-depends:     base >=4.12 && <4.13,
+                       bytestring >=0.10 && <0.11,
+                       binary-strict
+    default-language:  Haskell2010
+
